--- a/django_blog/blog/templates/login.html
+++ b/django_blog/blog/templates/login.html
@@ -1,7 +1,15 @@
 <!-- blog/templates/blog/login.html -->
+{% extends "blog/base.html" %}
+{% load static %}
+
+{% block content %}
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
+<script src="{% static 'js/scripts.js' %}"></script>
+
 <h2>Login</h2>
-<form method="POST" action="{% url 'login' %}">
+<form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Login</button>
 </form>
+{% endblock %}
