--- a/django_blog/blog/templates/register.html
+++ b/django_blog/blog/templates/register.html
@@ -1,7 +1,15 @@
 <!-- blog/templates/blog/register.html -->
+{% extends "blog/base.html" %}
+{% load static %}
+
+{% block content %}
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
+<script src="{% static 'js/scripts.js' %}"></script>
+
 <h2>Register</h2>
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Register</button>
 </form>
+{% endblock %}
