--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -1,30 +1,38 @@
 <!-- blog/templates/blog/post_detail.html -->
 
-{% extends "blog/base.html" %}
-{% block content %}
-  <h2>{{ post.title }}</h2>
-  <p>{{ post.content }}</p>
-  <hr>
-  <h3>Comments:</h3>
-  {% for comment in post.comments.all %}
-    <p><strong>{{ comment.author }}:</strong> {{ comment.content }}</p>
-    <small>{{ comment.created_at }}</small>
-    {% if request.user == comment.author %}
-      <a href="{% url 'edit-comment' comment.id %}">Edit</a>
-      <a href="{% url 'delete-comment' comment.id %}">Delete</a>
-    {% endif %}
-  {% empty %}
-    <p>No comments yet.</p>
+{% extends "blog/base.html" %} {% block content %}
+
+<h2>{{ post.title }}</h2>
+<p>{{ post.content }}</p>
+<hr />
+<h3>Comments:</h3>
+{% for comment in post.comments.all %}
+<p><strong>{{ comment.author }}:</strong> {{ comment.content }}</p>
+<small>{{ comment.created_at }}</small>
+{% if request.user == comment.author %}
+<a href="{% url 'edit-comment' comment.id %}">Edit</a>
+<a href="{% url 'delete-comment' comment.id %}">Delete</a>
+{% endif %} {% empty %}
+<p>No comments yet.</p>
+{% endfor %}
+<hr />
+<h3>Leave a Comment:</h3>
+{% if user.is_authenticated %}
+<form method="post" action="{% url 'add-comment' post.id %}">
+  {% csrf_token %} {{ form.as_p }}
+  <button type="submit">Submit Comment</button>
+</form>
+{% else %}
+<p>You must be logged in to add a comment.</p>
+{% endif %}
+
+<!-- blog/templates/blog/post_detail.html -->
+<h1>{{ post.title }}</h1>
+<p>{{ post.content }}</p>
+<p>
+  Tags: {% for tag in post.tags.all %}
+  <a href="{% url 'posts-by-tag' tag.slug %}">{{ tag.name }}</a>
   {% endfor %}
-  <hr>
-  <h3>Leave a Comment:</h3>
-  {% if user.is_authenticated %}
-    <form method="post" action="{% url 'add-comment' post.id %}">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type="submit">Submit Comment</button>
-    </form>
-  {% else %}
-    <p>You must be logged in to add a comment.</p>
-  {% endif %}
+</p>
+
 {% endblock %}
